# metocean-ml

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: example_fetch_laws.py  example_ml.py  example_run_ml_models.py  example_single_variable.py  example_spectra_ml.ipynb  example_spectra_ml.py  example_timeseries_estimator.py  verification.ipynb
examples/data/: run_model_CNN_int_params_Vartdalsfjorden_(2017-01-01 to 2023-02-28)_test.nc
metocean_ml/: dataset.py  examples.py  geospatial.py  model_class.py  models.py  physics.py  pipelines.py  preprocessing.py  spectra_tools.py  trainer.py
tests/: test_dataset.py  test_models.py  test_physics.py
tests/data/: NORA3_SULA.nc  coordinates.csv
